Finish class service test